Re-run to control

--- a/comp511_assignment3_EA_GK/Vision_Transformer_ViT.ipynb
+++ b/comp511_assignment3_EA_GK/Vision_Transformer_ViT.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b3294ab",
    "metadata": {
     "id": "L8tQwIsaWdLk",
     "tags": [
@@ -21,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d4ad38c",
    "metadata": {
     "id": "BQV3ocAXWdLn"
    },
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "045c8c62",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -61,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "112ee271",
    "metadata": {
     "id": "oZ4l7VqZWdLo",
     "pycharm": {
@@ -90,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "74c96c14",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -149,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4a45ab",
    "metadata": {
     "id": "6RMEllRrWdLq",
     "tags": [
@@ -165,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2d4b2447",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -206,7 +199,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a45e004b",
    "metadata": {
     "id": "VeB-icVsWdLr"
    },
@@ -237,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a70d088",
    "metadata": {
     "id": "206ecd45"
    },
@@ -329,7 +320,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "212e82b6",
    "metadata": {
     "id": "033e8d01"
    },
@@ -342,7 +332,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f8f92356",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -376,7 +365,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62d2c33",
    "metadata": {
     "id": "58ed9133"
    },
@@ -390,7 +378,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "55ce49e5",
    "metadata": {
     "id": "0f1aad75"
    },
@@ -423,7 +410,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6ebb8c50",
    "metadata": {
     "id": "e33aa313"
    },
@@ -479,7 +465,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a19386f",
    "metadata": {
     "id": "5585d6dc"
    },
@@ -492,7 +477,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "18207b1d",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -526,7 +510,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746f8e4e",
    "metadata": {
     "id": "1e918eff"
    },
@@ -539,7 +522,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ed845f1c",
    "metadata": {
     "id": "41e640ad"
    },
@@ -634,7 +616,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14115d9",
    "metadata": {
     "id": "d75bf697"
    },
@@ -647,7 +628,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6cbce67f",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -681,7 +661,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ca5774",
    "metadata": {
     "id": "c8c0fa09"
    },
@@ -691,7 +670,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77231ebf",
    "metadata": {
     "id": "6ea9ae7e"
    },
@@ -705,7 +683,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1dd7e04d",
    "metadata": {
     "id": "38d5a8fd",
     "pycharm": {
@@ -724,7 +701,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3639484c",
    "metadata": {
     "id": "9c0e406a"
    },
@@ -736,7 +712,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7fc01b30",
    "metadata": {
     "id": "112844f3",
     "pycharm": {
@@ -795,7 +770,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c007eda",
    "metadata": {
     "id": "e3a4f54c"
    },
@@ -807,7 +781,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6964e0ea",
    "metadata": {
     "id": "f314d4eb"
    },
@@ -846,7 +819,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d82ddf9",
    "metadata": {
     "id": "83b031c6"
    },
@@ -864,7 +836,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "64d3954d",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -901,7 +872,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5a322bc8",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1129,7 +1099,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75659f46",
    "metadata": {
     "id": "2039676f"
    },
@@ -1141,7 +1110,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c15eb6cf",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4023,7 +3991,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4037,7 +4005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.10"
   },
   "vscode": {
    "interpreter": {
